<resources>
    <string name="app_name">Cinemato</string>
    <string name="movies">Movies</string>
    <string name="popular_people">Popular People</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="settings">Settings</string>

    <string name="search_hint">Search Movies…</string>

    <string name="search_hint2">Search Actors…</string>

    <string name="app_label">Cinemato</string>

    <string name="search_view_title">Search</string>
    <string name="search">Search</string>

    <string name="home">Home</string>
    <string name="no_reviews_available">No results were found… </string>
    <string name="n_a">N/A</string>
    <string name="dots">…</string>

    <string name="trailers">Trailers</string>
    <string name="recommendations">Recommendations</string>
    <string name="as_character">as %1$s</string>
    <string name="images">Images</string>
    <string name="facts">Facts</string>
    <string name="born">Born</string>
    <string name="birthplace">Birthplace</string>
    <string name="also_known_as">Also Known As</string>
    <string name="age">Age</string>
    <string name="homepage">Homepage</string>
    <string name="died">Died</string>
    <string name="connect_to_tmdb">Connect to TMDB</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="logo">logo</string>
    <string name="transition_name">myTransition</string>

    <string name="original_language">Original Language</string>
    <string name="directed_by">Directed By</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="original_title">Original Title</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="clear_al">Clear all cached data for movies, shows, and people</string>
    <string name="clear_application_cache">Clear Application Cache</string>
    <string name="application">Application</string>

</resources>
